# copilot_real_time_interview

./: README.md  install_dependencies.sh  install_whisper.sh  pyproject.toml  run.py  start.sh  start_api.sh
frontend/app/: chatgpt-interface.tsx
frontend/utils/: .socketio.ts.swp  api.ts  socketio.ts
intervista_assistant/: .env.example  api.py  api_launcher.py  config.py  gemini_client.py  gemini_realtime_thread.py  intervista_assistant.py  main.py  realtime_text_thread.py  routes.py  session_handlers.py  session_manager.py  web_realtime_text_thread.py  whisper_transcriber.py
intervista_assistant/modules/: api_routes.py  audio_handler.py  audio_processor.py  image_processor.py  session_manager.py  socket_handlers.py  whisper_transcriber.py
tests/: test_gemini_client.py
