[tool.poetry]
name = "intervista-assistant"
version = "0.1.0"
description = "AI-powered interview assistant"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.64.0"
pyqt5 = "^5.15.11"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
pyperclip = "^1.9.0"
pyautogui = "^0.9.54"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
python-socketio = "^5.10.0"
werkzeug = "^3.0.1"
google-generativeai = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "intervista_assistant.api_launcher:main"
